fixed image alignment by putting into fixed height div

--- a/portlets/staffmembers-portlet/src/main/webapp/css/main.css
+++ b/portlets/staffmembers-portlet/src/main/webapp/css/main.css
@@ -42,3 +42,7 @@
 .staffmembers-list {
   line-height: 150%;
 }
+
+.descriptionContainer {
+  height: 50px;
+}
